syntax = "proto3";
package msg;

message PlayerDTO {
  int32 id = 1;
  string UserName = 2;
}


message MoveDTO {
  int32 id = 1;
  Vector3 point = 2;
  Vector2 status = 3;
}

message Vector3 {
  string x = 1;
  string y = 2;
  string z = 3;
}

message Vector2 {
  string x = 1;
  string y = 2; 
  bool runable = 3;
}





